--- a/1.7.md
+++ b/1.7.md
@@ -1,7 +1,7 @@
 # 3D Parallelism: Orchestrating the Symphony
 **Part 7 of "Distributed Training from Scratch" - Chapter One Finale**
 
-In 1943, Warren McCulloch and Walter Pitts showed that networks of simple artificial neurons could compute any logical function. In 2024, we've discovered that networks of simple artificial neurons require such stupendous amounts of computation that we need to split them across three orthogonal dimensions of parallelism simultaneously, coordinate the resulting chaos across hundreds of GPUs, and somehow maintain mathematical correctness while everything is happening at once. McCulloch and Pitts probably didn't see that coming. Then again, they probably didn't expect their "simple" neurons to have 175 billion parameters either.
+In 1943, Warren McCulloch and Walter Pitts showed that networks of simple artificial neurons could compute any logical function. In 2024, we've discovered that networks of simple artificial neurons require such stupendous amounts of computation that we need to split them across three orthogonal dimensions of parallelism simultaneously, coordinate the resulting chaos across hundreds of GPUs, and somehow maintain mathematical correctness while everything is happening at once. A sort of Oscillation Overthruster if you get the reference. McCulloch and Pitts probably didn't see that coming. Then again, they probably didn't expect their "simple" neurons to have 175 billion parameters either any more than they expected a neuron to be incapable of calculating XOR. (Minsky's 1969 bombshell which eventually leads to Deep Learning.) 
 
 Welcome to 3D parallelism, the final boss of distributed training. We've learned to split computations within layers (tensor parallelism), split layers across stages (pipeline parallelism), split data across replicas (data parallelism), quantize our precision (mixed precision), forget our activations (gradient checkpointing), and shard our optimizer states (ZeRO). Now we put it all together into a three-dimensional optimization problem that would make a chess grandmaster weep.
 
