--- a/1.7.md
+++ b/1.7.md
@@ -5,7 +5,7 @@ In 1943, Warren McCulloch and Walter Pitts showed that networks of simple artifi
 
 Welcome to 3D parallelism, the final boss of distributed training. We've learned to split computations within layers (tensor parallelism), split layers across stages (pipeline parallelism), split data across replicas (data parallelism), quantize our precision (mixed precision), forget our activations (gradient checkpointing), and shard our optimizer states (ZeRO). Now we put it all together into a three-dimensional optimization problem that would make a chess grandmaster weep.
 
-This is where distributed training stops being about individual techniques and becomes about orchestrating a symphony of computational strategies, each one solving a different bottleneck, all of them running simultaneously without stepping on each other's mathematical feet. It's either the pinnacle of distributed systems engineering, or the most elaborate Rube Goldberg machine ever conceived. Possibly both.
+This is where distributed training stops being about individual techniques and becomes about orchestrating a symphony of computational strategies, each one solving a different bottleneck, all of them running simultaneously without stepping on each other's mathematical feet. It's either the pinnacle of distributed systems engineering, or the most elaborate Rube Goldberg machine ever conceived. And once you've worked on this at scale you realize, it's definitely both. 
 
 ## The Three Dimensions of Scale
 
