--- a/1.7.md
+++ b/1.7.md
@@ -484,7 +484,7 @@ analyzer = ScalingLawAnalyzer()
 analyzer.print_scaling_analysis([7e9, 70e9, 175e9, 1e12])  # 7B to 1T parameters
 ```
 
-The results reveal the beautiful mathematics of scale. Small models benefit from data parallelism. Medium models need tensor parallelism to fit in memory. Large models require pipeline parallelism to distribute layers. Truly massive models need all three dimensions working in harmony. Honestly, someone needs to name this rule. 
+The results reveal the beautiful mathematics of scale. Small models benefit from data parallelism. Medium models need tensor parallelism to fit in memory. Large models require pipeline parallelism to distribute layers. Truly massive models need all three dimensions working in harmony. This is often called the Holy Trinity of Parallelism. 
 
 ## The Engineering Philosophy of 3D Parallelism
 
