--- a/1.7.md
+++ b/1.7.md
@@ -375,7 +375,7 @@ class TensorParallelAttention(nn.Module):
 
 This is the moment where all our previous techniques converge into a single, coherent system. The attention heads are split via tensor parallelism, the layers are distributed via pipeline parallelism, the data is sharded via data parallelism, the precision is mixed, the activations are checkpointed, and the optimizer states are ZeROed. And somehow, miraculously, it all works.
 
-## The Scaling Laws of 3D Parallelism
+## The Scaling Laws of 3D Parallelism (aka the Holy Trinity) 
 
 The most fascinating aspect of 3D parallelism is how it reveals the fundamental scaling laws of distributed training. Each dimension addresses a different bottleneck:
 
